@@ -13,7 +13,6 @@
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 // GNU General Public License for more details.
 
-
 // Load global vars
 global $config;
 
@@ -56,10 +55,10 @@ if (isset ($_GET["update"])) { // Edit mode
 	$network = "";
 	$description = "";
 	$id_recon_server = 0;
-	$interval = 43200;
+	$interval = 0;
 	$id_group = 0;
 	$create_incident = 1;
-    $snmp_community = "public";
+	$snmp_community = "public";
 	$id_network_profile = 1;
 	$id_os = -1; // Any
 	$recon_ports = ""; // Any
@@ -114,6 +113,7 @@ $table->data[3][1] = print_input_text ('network', $network, '', 25, 0, true);
 
 // Interval
 $values = array ();
+$values[0] = __('Manual');
 $values[3600] = __('%d hour', 1);
 $values[7200] = __('%d hours', 2);
 $values[21600] = __('%d hours', 6);
@@ -156,7 +156,7 @@ $table->data[9][1] = print_select_groups(false, "AR", false, 'id_group', $id_gro
 $values = array (0 => __('No'), 1 => __('Yes'));
 $table->data[10][0] = "<b>".__('Incident');
 $table->data[10][1] = print_select ($values, "create_incident", $create_incident,
-	'','','',true);
+	'','','',true).' '.print_help_tip (__('Choose if the discovery of a new system creates an incident or not.'), true);
 
 // SNMP default community
 $table->data[11][0] = "<b>".__('SNMP Default community');
